--- a/pvp-meta-web/package.json
+++ b/pvp-meta-web/package.json
@@ -28,9 +28,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-player": "^2.11.2",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "screenfull": "^6.0.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
   },
